# dsa-final-project

./: CMakeLists.txt  README.md  benchmark.cpp  benchmark_insertion.cpp  benchmark_merge_quick.cpp  insertion_sort.cpp  insertion_sort.h  merge_sort.cpp  merge_sort.h  parallel_insertion_sort.cpp  parallel_insertion_sort.h  parallel_merge_sort.cpp  parallel_merge_sort.h  parallel_sorts.cpp  parallel_sorts.h  quick_sort.cpp  quick_sort.h  split_and_merge.cpp  split_and_merge.h  unit_tests.cpp  unit_tests_insertion.cpp  unit_tests_merge_quick.cpp
DSA/: DSA.pro  fourthwindow.cpp  fourthwindow.h  fourthwindow.ui  is_code.cpp  is_code.h  is_code.ui  main.cpp  mainwindow.h  mainwindow.ui  mscode.cpp  mscode.h  mscode.ui  newwindow.cpp  newwindow.h  qscode.cpp  qscode.h  qscode.ui  quicksort.cpp  quicksort.h  secondwindow.cpp  secondwindow.h  secondwindow.ui  thirdwindow.cpp  thirdwindow.h  thirdwindow.ui
DSA_GUI/: DSA.pro  DSA.pro.user.d7e2d05  fourthwindow.cpp  fourthwindow.h  fourthwindow.ui  mainwindow.cpp  mainwindow.ui  mscode.cpp  mscode.ui  qscode.cpp  qscode.ui  secondwindow.cpp  thirdwindow.cpp  thirdwindow.h
